# rag_project

./: .dockerignore  .gitignore  Dockerfile  Jenkinsfile.test  README.md  main.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: aws.yml  ci.yaml  task_definition.json
data/: goldens.csv
data/session_20260620_015657_6f959446/: 19017ce4.txt
faiss_index/session_20260618_195445_c32bc07d/: index.pkl  ingested_meta.json
faiss_index/session_20260618_220225_3c00e7bb/: index.pkl  ingested_meta.json
faiss_index/session_20260618_220455_afd66087/: index.faiss  index.pkl  ingested_meta.json
faiss_index/session_20260619_143413_cd1a000e/: index.pkl  ingested_meta.json
faiss_index/session_20260620_014756_3b4c9e87/: index.pkl  ingested_meta.json
faiss_index/session_20260620_015657_6f959446/: index.pkl  ingested_meta.json
faiss_index/session_20260620_133034_a03b4fcb/: index.pkl  ingested_meta.json
faiss_index/session_20260621_005936_b4acfbd7/: index.pkl  ingested_meta.json
multi_doc_chat/config/: config.yaml
multi_doc_chat/exception/: custom_exception.py
multi_doc_chat/logger/: custom_logger.py
multi_doc_chat/model/: models.py
multi_doc_chat/utils/: document_ops.py  file_io.py  model_loader.py
notebook/: experiments.ipynb  rag.ipynb
notebook/logs/: evaluations.ipynb  rag.ipynb
notebook/logs/faiss_index/session_20260620_122515_c6ca24bb/: index.pkl  ingested_meta.json
notebook/logs/faiss_index/session_20260620_122717_b854d9d9/: index.pkl  ingested_meta.json
test/: conftest.py
(+3 files in other folders)
